# tinytop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  HANDOFF.md  INSTALL.md  LICENSE  NOTICE  PROGRESS.md  README.md  package.json  tinytop  tinytop.cmd  tinytop.ps1  tsconfig.json
.github/workflows/: build-binaries.yml
agent/: Cargo.toml
agent/assets/dashboard/: app.js  index.html  styles.css
agent/crates/tinytop-agent/: Cargo.toml
agent/crates/tinytop-agent/src/: main.rs  writer.rs
agent/crates/tinytop-agent/tests/: help_contract.rs  serve_contract.rs
agent/crates/tinytop-collectors/: Cargo.toml
agent/crates/tinytop-collectors/src/: common.rs  lib.rs  linux.rs  macos.rs  windows.rs
agent/crates/tinytop-collectors/tests/: linux_collector.rs
agent/crates/tinytop-store/: Cargo.toml
agent/crates/tinytop-store/src/: lib.rs
agent/crates/tinytop-store/tests/: history_json_contract.rs  sqlite_history_store.rs
agent/crates/tinytop-types/: Cargo.toml
agent/crates/tinytop-types/src/: lib.rs
docs/: INTEGRATION.md  sqlite-history-architecture.md
docs/adr/: 0001-sqlite-writer-process.md  0002-initial-snapshot-json-history.md  0003-bash-bootstrap-bun-install-wizard.md  0004-rust-agent-sqlx-store.md  0005-rust-single-daemon-systemd-runtime.md  0006-embedded-dashboard-assets.md  0007-daemon-and-browser-dashboard-settings.md  0008-settings-dialog-presentation.md  0009-additive-history-points-and-markers-api.md  0010-feature-gated-native-platform-collectors.md  0011-powershell-first-windows-command-center.md  0012-reverse-proxy-base-path-support.md  0012-rust-inode-collection-via-statvfs.md  README.md
docs/guides/: API.md  OPERATIONS.md  RELEASE_BUILDS.md  WINDOWS.md
docs/reports/: 2026-06-24-dependency-vetting.md  2026-06-24-history-scrubber-verification.md  2026-06-24-rust-agent-dependency-vetting.md  2026-06-24-theme-graph-verification.md  2026-06-24-verification.md  2026-06-25-documentation-sweep.md  2026-06-25-rust-daemon-dependency-vetting.md  2026-06-25-webui-confirmation-dialog-verification.md  2026-06-26-dashboard-operator-console.md  2026-06-26-dashboard-operator-v2-platform-roadmap.md  2026-06-26-dashboard-timeline-settings.md  2026-06-26-history-retention-docs.md  2026-06-26-load-gauge.md  2026-06-26-runtime-auto-detect-version.md  2026-06-26-runtime-specific-verification.md  2026-06-26-select-dropdown-contrast.md  2026-06-26-settings-dialog.md  2026-06-26-svg-favicon.md  2026-06-26-windows-command-center-and-critical-status.md  2026-06-27-live-readme-screenshot.md  2026-06-27-on-demand-binary-workflow.md  2026-06-27-settings-toggles-release.md  2026-06-27-windows-service-elevation-guard.md  2026-06-29-windows-native-runtime-fixes.md  2026-06-30-nginx-subpath-integration.md  2026-07-03-rustix-dependency-vetting.md
docs/superpowers/plans/: 2026-06-24-tinytop-install-wizard-implementation.md  2026-06-24-tinytop.md  2026-06-24-wsl-status-dashboard.md  2026-06-26-dashboard-operator-console.md  2026-06-26-dashboard-operator-v2-platform-roadmap.md  2026-06-26-dashboard-timeline-settings.md  2026-06-26-windows-command-center-and-critical-status.md
docs/superpowers/specs/: 2026-06-24-history-scrubber-design.md  2026-06-24-theme-and-graph-options-design.md  2026-06-24-tinytop-design.md  2026-06-24-tinytop-install-wizard-design.md  2026-06-24-wsl-status-dashboard-design.md
legacy/: bun-collector.ts
legacy/dashboard/: app.js  index.html  styles.css
public/: app.js  index.html  styles.css
src/: collector-daemon.ts  collector.ts  history-store.ts  ops.ts  parsers.ts  runtime.d.ts  server.ts  settings.ts  version.ts
src/wizard/: index.ts
tests/: collector-runtext.test.ts  dashboard-assets.test.ts  dashboard-operator-alert.test.ts  dashboard-overview.test.ts  dashboard-process-filesystem.test.ts  dashboard-settings.test.ts  dashboard-timeline.test.ts  fixtures.ts  github-actions-build-binaries.test.ts  history-store.test.ts  ops.test.ts  parsers.test.ts  server.test.ts  snapshot.test.ts  tinytop-powershell.test.ts  tinytop-script.test.ts  webui-dialogs.test.ts  wizard.test.ts
