[package]
name = "tinytop-agent"
version = "0.1.23"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tinytop-collectors = { path = "../tinytop-collectors" }
tinytop-store = { path = "../tinytop-store" }
tokio.workspace = true
