[package]
name = "tinytop-collectors"
version = "0.1.25"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
procfs.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
time.workspace = true
tinytop-types = { path = "../tinytop-types" }
