[package]
name = "tinytop-collectors"
version = "0.1.35"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["linux-collector"]
linux-collector = ["dep:procfs"]
macos-collector = []
windows-collector = []

[dependencies]
serde_json.workspace = true
sysinfo.workspace = true
time.workspace = true
tinytop-types = { path = "../tinytop-types" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true, optional = true }
