[package]
name = "tinytop-store"
version = "0.1.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
sqlx.workspace = true
tinytop-types = { path = "../tinytop-types" }

[dev-dependencies]
tokio.workspace = true
